# SI24_LosCapybaros

./: .gitignore  =0.26.3  README.md  hola_mundo.py  mountainCar.py  pyproject.toml  termistor.ipynb
src/si24/ejercicios/E00_extra_rl/Gerardo_Farias/: comment.md  q_learning.py
src/si24/ejercicios/E02_intro/Anacecilia Guerra/: Intro_a_jupyter_notebook.ipynb  Intro_a_numpy.ipynb
src/si24/ejercicios/E02_intro/Anacecilia Guerra2/: Intro_a_jupyter_notebook.ipynb  Intro_a_numpy.ipynb
src/si24/ejercicios/E02_intro/Bismarck_Rivera/: Intro_a_jupyter_notebook.ipynb  Intro_a_numpy.ipynb
src/si24/ejercicios/E02_intro/Gerardo_Farias/: Intro_a_jupyter_notebook.ipynb  Intro_a_numpy.ipynb
src/si24/ejercicios/E02_intro/IsraeL_Ruiz/: Intro_a_jupyter_notebook.ipynb  Intro_a_numpy.ipynb
src/si24/ejercicios/E03_linear_reg/: comment.md  gradient_descent.ipynb  linear_regression.ipynb
src/si24/ejercicios/E04_logistic_reg/: logistic_regression.ipynb
src/si24/ejercicios/E05_unsupervised/: clustering.ipynb  dim_reduction.ipynb
src/si24/ejercicios/E07_mlp_reg/: mlp_reg.ipynb  mlp_reg_clase.ipynb  test_preds.csv
src/si24/ejercicios/E08_cnn/: cnn_classifier.ipynb
src/si24/ejercicios/E09_fuzzy_logic/: tipping_problem.ipynb
src/si24/proyectos/P01_digit_recognition/: proyecto_1_digits.ipynb
src/si24/proyectos/P01_sentiment_analysis/: preprocessing.py  proyecto_1_sentiment.ipynb  training.py
src/si24/proyectos/P02_facial_expressions/: dataset.py  inferencia.py  network.py  plot_losses.py  training.py
src/si24/proyectos/PF_AudioRecognition/: dataloader.py
(+18 files in other folders)
